2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Cards/TargetCardCard.cs:
	* Session/Game/Cards/TargetPlayerCard.cs:
	* Session/Game/Cards/TargetCardTableCard.cs:
	* Session/Game/Cards/TargetCardGoldenCard.cs:
	* Session/Game/Cards/TargetPlayerTableCard.cs:
	* Session/Game/Cards/TargetPlayerGoldenCard.cs:
	  Added check for HasCardEffect() so that for example you
	  can't play a Diamond Bang on Apache Kid.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Session.cs:
	* Session/Game/Game.cs:
	  Changed the algorithm for generating characters for game in
	  order to avoid duplicate characters in the game.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Player.cs:
	  Changed the way that the 'missed' effect of a card is
	  evaluated so that Elena Fuente can respond with Dodge and
	  still draw 1 card.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Server.cs:
	  Unlock server if an exception is thrown in
	  Bang.Server.Server.CreateSession().

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Game.cs:
	* Session/Game/Player.cs:
	  Adapt to the changes in the interface.

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* Session/Game/GameCycle.cs:
	  Added some missing OnPlayContinue calls.

	* AssemblyInfo.cs:
	  

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Session.cs:
	  Create the SessionAdmin object also when constructing the
	  Session from stream.

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Server Daemon.csproj:
	  

	* Session/SessionEventManager.cs:
	  The OnNewRequest event moved to IPlayerEventListener and is
	  now fired only for the requested player.
	Added a new OnPlayerUsedAbility event with target player.
	The OnPlayerUsedAbility events now also inform about the
	  character whose ability was used.
