@@ -3,6 +3,15 @@
 	* AssemblyInfo.cs:
 	  
 
+	* Session/Game/PlayerControl.cs:
+	  Fixed bad parameter passing when firing the OnNewRequest
+	  event.
+
+2011-09-29  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
 	* Session/Game/Cards/TargetCardCard.cs:
 	* Session/Game/Cards/TargetPlayerCard.cs:
 	* Session/Game/Cards/TargetCardTableCard.cs:
